# book2audiobook

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  run_diagnostics.py  test_ui_import.py
book2audiobook/: __init__.py  app.py
book2audiobook/backends/: base.py  kokoro_backend.py  openai_backend.py  openrouter_backend.py
book2audiobook/core/: audio_concat.py  cache.py  chunking.py  cleaning.py  ffmpeg_packager.py  jobs.py  pipeline.py
book2audiobook/io/: epub_parser.py  metadata.py  pdf_parser.py  txt_parser.py
book2audiobook/resources/: default_config.json  icon.icns
book2audiobook/ui/: main_window.py  main_window_legacy.py  models.py  preferences.py  state.py  theme.py  widgets.py
book2audiobook/ui/components/: __init__.py  buttons.py  card.py  collapsible.py  drag_drop.py  header_bar.py  labeled_field.py  sidebar.py  step_indicator.py  toast.py
book2audiobook/ui/controllers/: __init__.py  conversion_controller.py
book2audiobook/ui/screens/: __init__.py  about_screen.py  convert_screen.py  logs_screen.py  voices_screen.py
tests/: test_chunking.py  test_kokoro_backend.py  test_pipeline_progress_throttle.py  test_resume_jobs.py
