[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "book2audiobook"
version = "0.1.0"
description = "Desktop app to convert DRM-free books into audiobooks"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "PySide6==6.8.1",
  "openai>=1.40.0",
  "urllib3<2",
  "keyring>=25.0.0",
  "platformdirs>=4.3.0",
  "ebooklib>=0.18",
  "beautifulsoup4>=4.12.0",
  "PyMuPDF>=1.24.0",
  "pdfplumber>=0.11.0"
]

[project.scripts]
book2audiobook = "book2audiobook.app:main"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
